--- a/Analyzers/test/Umbrella.Analyzers.Test.Shared/Umbrella.Analyzers.Test.Shared.csproj
+++ b/Analyzers/test/Umbrella.Analyzers.Test.Shared/Umbrella.Analyzers.Test.Shared.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0</TargetFrameworks>
+		<TargetFramework>net10.0</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<IsTestProject>false</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
+		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
 		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" />
-		<PackageReference Include="xunit" Version="2.9.3" />
+		<PackageReference Include="xunit.v3" Version="3.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
