--- a/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -21,6 +21,11 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="9.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.11" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
