--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net462;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net462;net8.0;net9.0;net10.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -64,6 +64,18 @@
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.11" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.11" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="10.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
