--- a/Maui/src/Umbrella.Maui/Umbrella.Maui.csproj
+++ b/Maui/src/Umbrella.Maui/Umbrella.Maui.csproj
@@ -4,16 +4,22 @@
 		<SingleProject>true</SingleProject>
 		<OutputType>Library</OutputType>
 		<EnableDefaultMauiItems>False</EnableDefaultMauiItems>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
 	</PropertyGroup>
 	<PropertyGroup>
 		<PackageId>Umbrella.Maui</PackageId>
 		<Description>This package contains various utilities and controls for use with .NET Maui projects.</Description>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="12.3.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.120" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.120" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="12.3.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Microsoft.Maui.Controls" Version="10.0.10" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.10" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
